manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: york-pnl-demo
  selfLink: /api/v1/namespaces/default/services/york-pnl-demo
spec:
  ports:
  - port: 8080
    targetPort: 8000
  selector:
    app: york-pnl-demo
  type: NodePort
